Squash some deprecated warnings