@@ -362,9 +362,9 @@ public class BetweenOperatorTest extends AbstractSelectorTestCase {
     }
 
     static {
-        PROPERTIES.put("one", new Integer(1));
-        PROPERTIES.put("two", new Integer(2));
-        PROPERTIES.put("three", new Integer(3));
+        PROPERTIES.put("one", Integer.valueOf(1));
+        PROPERTIES.put("two", Integer.valueOf(2));
+        PROPERTIES.put("three", Integer.valueOf(3));
     }
 
     @Override
