@@ -579,10 +579,10 @@ public class FloatTest extends AbstractSelectorTestCase {
 
     static {
         final double rate = 0.2;
-        PROPERTIES.put("rate", new Double(rate));
-        PROPERTIES.put("zero", new Double(0.0));
-//        PROPERTIES.put("floatNaN", new Float(Float.NaN));
-//        PROPERTIES.put("doubleNaN", new Double(Double.NaN));
+        PROPERTIES.put("rate", Double.valueOf(rate));
+        PROPERTIES.put("zero", Double.valueOf(0.0));
+//        PROPERTIES.put("floatNaN", Float.valueOf(Float.NaN));
+//        PROPERTIES.put("doubleNaN", Double.valueOf(Double.NaN));
     }
 
     @Override
